force-app/main/default/objects/Deal__c/fields/Deal_Group__c.field-meta.xml
<CustomField>
    <fullName>Deal_Group__c</fullName>
    <formula>Opportunity_Product__r.Opportunity.Owner.FirstName &amp;&quot; &quot;&amp; Opportunity_Product__r.Opportunity.Owner.LastName  &amp; &quot; &quot; &amp;  Opportunity_Product__r.Opportunity.Name  &amp; &quot; &quot; &amp; Deal_Id__c &amp; &quot; &quot; &amp;  Programmatic_Revenue_Landing__r.Demand_Partner__c  &amp; &quot; &quot; &amp; PMP_Type__c &amp; &quot; &quot; &amp; Deal_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Group</label>
    <type>Text</type>
</CustomField>