force-app/main/default/objects/Deal__c/fields/Deal_Id__c.field-meta.xml
<CustomField>
    <fullName>Deal_Id__c</fullName>
    <externalId>true</externalId>
    <label>Deal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>