force-app/main/default/objects/Deal__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <formula>CASESAFEID(Opportunity_Product__r.OpportunityId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Id</label>
    <type>Text</type>
</CustomField>