force-app/main/default/objects/Deal__c/fields/PMP_Type__c.field-meta.xml
<CustomField>
    <fullName>PMP_Type__c</fullName>
    <label>PMP Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>