force-app/main/default/objects/Deal__c/fields/Programmatic_Revenue_Landing__c.field-meta.xml
<CustomField>
    <fullName>Programmatic_Revenue_Landing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programmatic Revenue Landing</label>
    <referenceTo>Programmatic_Revenue_Landing__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>