force-app/main/default/objects/Deal__c/fields/temp_del__c.field-meta.xml
<CustomField>
    <fullName>temp_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>temp</label>
    <type>Checkbox</type>
</CustomField>