force-app/main/default/objects/Deal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal_Name__c</columns>
    <columns>Deal_Id__c</columns>
    <columns>Deal_Type__c</columns>
    <columns>Impressions__c</columns>
    <columns>PMP_Type__c</columns>
    <columns>Revenue__c</columns>
    <columns>Opportunity_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>